# blockora-chain

./: Cargo.toml  README.md
.github/workflows/: main.yml
cli/: main.rs  mod.rs
contracts/: README.md  mod.rs
core/: block.rs  chain.rs
docs/: README.md
network/: p2p.rs
src/: lib.rs
src/core/: block.rs  chain.rs  mod.rs  tx_pool.rs
tests/: test_basic.rs
wallet/: wallet.rs
