[package]
name = "blockora-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
